# Photo-agents

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  pyproject.toml
auth/: __init__.py  license.py
cli/: __init__.py  hub.pyw  launcher.pyw  runtime.py
clients/: COMPANION_README.md  client_common.py  companion.pyw  companion_v2.pyw  desktop_app.py  dingtalk_client.py  feishu_client.py  qq_client.py  resume_cmd.py  telegram_client.py  web_app.py  web_app_lite.py  wechat_client.py  wecom_client.py
clients/skins/boy/: skin.json
clients/skins/dinosaur/: skin.json
clients/skins/doux/: skin.json
clients/skins/glube/: skin.json
clients/skins/line/: License.txt  skin.json
clients/skins/mort/: skin.json
clients/skins/tard/: skin.json
clients/skins/vita/: skin.json
config/: __init__.py  keys_template.py
core/: __init__.py  handler.py  loop.py
evolution/: __init__.py  autonomous.py  scheduler.py
integrations/: __init__.py  langfuse_tracing.py
llm/: __init__.py  router.py
resources/: code_run_header.py  global_mem_insight_template_en.txt  insight_fixed_structure_en.txt  system_prompt.txt  tool_usable_history.json  tools_cn.json
resources/tmwd_cdp_bridge/: background.js  content.js  disable_dialogs.js  manifest.json  popup.html  popup.js
skills/: __init__.py  adb_ui.py  autonomous_operation_sop.md  github_contribution_sop.md  keychain.py  ljqCtrl.py  ljqCtrl_sop.md  memory_cleanup_sop.md  memory_management_sop.md  ocr_utils.py  plan_sop.md  procmem_scanner.py  procmem_scanner_sop.md  scheduled_task_sop.md  session_archive.py  skill_search.md  subagent.md  supervisor_sop.md  tmwebdriver_sop.md  ui_detect.py  verify_sop.md  vision_api_template.py  vision_sop.md  web_setup_sop.md
skills/sops/autonomous_ops/: helper.py  task_planning.md
skills/sops/skill_search/: __init__.py  __main__.py  engine.py
web/: __init__.py  dom.py  driver.py
